# ModifiedVindriktning

./: .gitignore  CMakeLists.txt  LICENSE  sdkconfig
main/: CMakeLists.txt  idf_component.yml  io.cpp  main.cpp  sample_array.cpp  semaphore.c
main/configs/: config.h  secrets.h
main/include/: colors.h  io.h  sample_array.h  semaphore.h
main/include/smartthings/: request.h
main/include/wifi/: wifi.h
main/smartthings/: request.c
main/wifi/: wifi.c
